# sli

./: CMakeLists.txt
src/: MachineCommands.h  MeshUtil.h  Point.h  Point2.h  PointUtil.cpp  PointUtil.h  Segment.h  SegmentUtil.cpp  SegmentUtil.h  Slicer.cpp  Slicer.h  StlReader.cpp  Triangle.h  TriangleUtil.cpp  TriangleUtil.h  Types.h  main.cpp
src/lib/: MachineCommands.h  MeshUtil.cpp  PerimeterProc.h  Point.cpp  Point2.h  PointUtil.cpp  PointUtil.h  PolygonUtil.cpp  PolygonUtil.h  ReadUtil.h  Segment.h  SegmentUtil.cpp  SegmentUtil.h  Slicer.cpp  Slicer.h  StlReader.h  TriangleUtil.cpp  TriangleUtil.h  Types.h
src/tests/: SegmentUtil_test.cpp
src/thirdPart/: clipper.cpp  clipper.hpp
